--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,26 @@
   text-align: center;
 }
 
+* {
+  font-family: Helvetica;
+}
+
+
+
+///////////////////////////////////////
+////////////// Multi Use /////////////
+/////////////////////////////////////
+
+.title-font {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.text-font {
+  font-size: 18px;
+  font-weight: 1px;
+}
+
 
 ///////////////////////////////////////
 ////////////// Nav Bar  //////////////
@@ -11,10 +31,74 @@
 display: flex;
 flex-direction: row;
 padding: 3vw 10vw;
-
+}
 
 .nav-title {
   font-size: 14px;
-  font-family: Helvetica;
+  color: #9B9B9B;
 }
+
+.nav-bold {
+  font-weight: bold;
+  color: black;
+}
+
+.nav-title-container {
+  width: 50vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.nav-bar-button {
+  background-color: rgb(35, 148, 250);
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+
+}
+
+@media screen and (max-width: 800px) {
+  .nav-title {
+   display: none;
+  }
+}
+
+
+///////////////////////////////////////
+////////////// Home //////////////////
+/////////////////////////////////////
+
+.home {
+  max-width: 100vw;
+}
+
+.home-main-img-container{
+max-width: 100%;
+}
+
+.about-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.home-contact-button {
+  font-size: 16px;
+  color: white;
+  background-color: rgb(35, 148, 250);
+  border-radius: 2px;
+  border: none;
+  padding: 5px 20px;
+}
+
+///////////////////////////////////////
+////////////// About /////////////////
+/////////////////////////////////////
+
+
+
+
+.dribble {
+  width: 100vw;
 }
