styling home page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,7 +9,10 @@
 ///////////
 // Home
 /////////
-
+.check-box {
+    height: 18px !important;
+    width: 21px !important;
+}
 
 //////////
 // About
